# c-management-template

./: README.md
BookManagement/: CMakeLists.txt
BookManagement/Array/: CMakeLists.txt  Makefile  arraylist.c  bbb.txt  book_data.txt  bookmanagement.c  bookmanagement.h  foo.txt  main.c  select_sort.c  select_sort.h  select_sort.h.gch  sscanf_test.c  ttt.txt
BookManagement/Array/a.out.dSYM/Contents/Resources/DWARF/: a.out
BookManagement/ArraySelfImplement/: SqList.c  SqList.h  a.out  main.c
BookManagement/LinkedList/: a.out  llbuild.c  main.c  main_mod.c  slist.h  slist.h.gch  test.c
BookManagement/LinkedList/a.out.dSYM/Contents/Resources/DWARF/: a.out
BookManagement/LinkedList/backup/: main.c  slist_test.c
BookManagement/Tree/: BinaryTree.c  BinaryTree.h  a.out  main.c
BookManagement/Tree/a.out.dSYM/Contents/Resources/DWARF/: a.out
ScoreManagement/: a.out  main.c  slist.c
airline_management/: .gdb_history  a.out  client  client.c  head.h  makefile  server  server.c
airline_management/date/: 1.txt  2.txt
airline_management/include/: text.h
airline_management/main/: project1.c  server.c
airline_management/register/: .txt  foo.txt
airline_management/src/: buy_airlplane.c  delete_airplane.c  file.c  head.c  info.c  insurance.c  lcd.c  login.c  meun.c  register.c  save.c  show_message.c  theck_in.c  usr_information.c
airline_management/user/: foo 1.txt  foo 2.txt
airline_management/usr_data/airplane_data/: A001.txt  A002.txt  A003.txt  A005.txt  A007.txt  A008.txt  B002.txt  C003.txt
bookmana_py/: book-man.py  book.txt  user.txt
(+4 files in other folders)
